--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -1,14 +1,22 @@
 @import "base/typography";
 
 
+body {
+  margin: 0;
+}
+
 nav {
   background: lightblue;
   display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 main {
-  background: lightyellow;
+  padding-top: 86px;
 }
+
 
 .blog-preview {
   p, h4 {
@@ -16,9 +24,49 @@ main {
   }
 }
 
+.blog-section-heading {
+  text-decoration: underline;
+  text-align: center;
+}
+
+.header-image {
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+}
+
+.blog-content {
+  padding: 0 10%;
+  margin: 0 auto;
+  max-width: 800px;
+
+  .post-date {
+    font-size: 12px;
+  }
+
+  .pull-quote {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .image-block {
+    border: 1px solid gray;
+    padding: 5px;
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .tags {
+    text-align: right;
+  }
+}
+
+
+
 
 footer {
-  position: fixed;
+  //position: fixed;
   bottom: 0;
   background: lightpink;
   width: 100%;
